# api-template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  LICENCE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
app/: main.py
app/models/algebra/: anothermodule.py  array.py
app/models/datawiz/: transformations.py
app/notebooks/: test_import.ipynb  test_modules_import_and_autoreload.ipynb
docker/: Docker_file_multistage_poetry_venvs_export_not_working  Dockerfile  docker-entrypoint.sh
models/algebra/: array.py
models/datawiz/: transformations.py
scripts/: lint.sh
tests/: conftest.py  test_api.py
