[tool.poetry]
name = "api-template"
version = "0.1.0"
description = ""
authors = ["Francesco Tamborra <francescotamborra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
fastapi = "^0.68.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black= "^21.7b0"
pre-commit= "^2.13"
pytest = "^5.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''