[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "api-template"
authors = ["Francesco Tamborra <francescotamborra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
jupyter = "^1.0.0"
uvicorn = "^0.14.0"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
black= "^21.7b0"
pre-commit= "^2.13"
pytest = "^5.2"
requests = "^2.26.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | venv
  | .venv
)/
'''